--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                     <a href="https://www.instagram.com/n_anurag10/" class="home__social-icon"><i class='bx bxl-instagram' ></i></a>
                     <a href="https://github.com/n-anurag" class="home__social-icon"><i class='bx bxl-github' ></i></a>
                 </div>
+                <div class="home__img">
 
-                <div class="home__img" ">
                    
                       <img src="assets/img/homepic.png" height="900px" alt="">
                      
