--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="home__data">
                     <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Anurag</span><br> Web Developer</h1>
 
-                    <a href="#" class="button">Get CV</a>
+                    <a href="#" class="button">Resume</a>
                 </div>
 
                 <div class="home__social">
