--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                                 
                             </div>
                             <div>
-                                <span class="skills__percentage">50%</span>
+                                <span class="skills__percentage">55%</span>
                             </div>
                         </div>
                         <div class="skills__data">
@@ -141,11 +141,11 @@
                                 <i class='bx bxl-react skills__icon'></i>
                                 <span class="skills__name">React</span>
                             </div>
-                            <div class="skills__bar skills__js">
+                            <div class="skills__bar skills__react">
                                 <!-- Insert your skills bar code here -->
                             </div>
                             <div>
-                                <span class="skills__percentage">60%</span>
+                                <span class="skills__percentage">50%</span>
                             </div>
                         </div>
                         
